--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -348,6 +348,9 @@
     <ClCompile Include="..\..\src\Performance.cpp" />
     <ClCompile Include="..\..\src\PostProcessor.cpp" />
     <ClCompile Include="..\..\src\RDP.CPP" />
+    <ClCompile Include="..\..\src\Drawer.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\..\src\RSP.cpp" />
     <ClCompile Include="..\..\src\ShaderUtils.cpp" />
     <ClCompile Include="..\..\src\SoftwareRender.cpp" />
@@ -471,6 +474,7 @@
     <ClInclude Include="..\..\src\PluginAPI.h" />
     <ClInclude Include="..\..\src\PostProcessor.h" />
     <ClInclude Include="..\..\src\RDP.h" />
+    <ClInclude Include="..\..\src\Drawer.h" />
     <ClInclude Include="..\..\src\RSP.h" />
     <ClInclude Include="..\..\src\ShaderUtils.h" />
     <ClInclude Include="..\..\src\SoftwareRender.h" />
