--- a/projects/msvc12/GLideN64.vcxproj.filters
+++ b/projects/msvc12/GLideN64.vcxproj.filters
@@ -640,5 +640,8 @@
     <ClInclude Include="..\..\src\Graphics\FramebufferTextureFormats.h">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\BufferCopy\PBOBinder.h">
+      <Filter>Header Files\BufferCopy</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
