--- a/projects/msvc12/osal.vcxproj
+++ b/projects/msvc12/osal.vcxproj
@@ -53,12 +53,14 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)osal\$(Configuration)\</OutDir>
+    <IntDir>$(Configuration)\$ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus_uniformset|Win32'">
     <OutDir>$(SolutionDir)osal\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)osal\$(Configuration)\</OutDir>
+    <IntDir>$(Configuration)\$ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
