--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,7 @@ set(GLideN64_SOURCES
   S2DEX2.cpp
   S2DEX.cpp
   SoftwareRender.cpp
+  TexrectDrawer.cpp
   TextDrawer.cpp
   TextureFilterHandler.cpp
   Textures.cpp
